--- a/index.html
+++ b/index.html
@@ -324,8 +324,8 @@
       whatsappNumber: "393000000000",   // es: 393476183313 (senza +)
       whatsappText: "Ciao! Ti scrivo da SegnalaFacile.",
       phoneNumber: "390000000000",
-      email: "info@example.com",
-      mapsQuery: "Cassino Piazza+Diamare" // testo per Google Maps
+      email: "vocidicassino@proton.me",
+      mapsQuery: "Cassino" // testo per Google Maps
     };
 
     // =========================
