--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="theme-color" content="#0b1220" />
-  <title>SegnalaFacile – Demo</title>
+  <title>SegnalaFacile</title>
 
   <link rel="manifest" href="manifest.webmanifest" />
-  <link rel="icon" href="icon-192.png" />
-  <link rel="apple-touch-icon" href="icon-192.png" />
+  <link rel="icon" href="icons/icon-192.png" />
+  <link rel="apple-touch-icon" href="icons/icon-192.png" />
 
   <style>
     :root{
@@ -321,9 +321,9 @@
     // CONFIG (personalizza qui)
     // =========================
     const CONFIG = {
-      whatsappNumber: "393000000000",   // es: 393476183313 (senza +)
+      whatsappNumber: "3476182313",   // es: 393476183313 (senza +)
       whatsappText: "Ciao! Ti scrivo da SegnalaFacile.",
-      phoneNumber: "390000000000",
+      phoneNumber: "3476182313",
       email: "vocidicassino@proton.me",
       mapsQuery: "Cassino" // testo per Google Maps
     };
