--- a/index.html
+++ b/index.html
@@ -321,9 +321,10 @@
     // CONFIG (personalizza qui)
     // =========================
     const CONFIG = {
-      whatsappNumber: "3476182313",   // es: 393476183313 (senza +)
+      whatsappNumber: "393476182313",   // es: 393476183313 (senza +)
       whatsappText: "Ciao! Ti scrivo da SegnalaFacile.",
-      phoneNumber: "3476182313",
+      phoneNumber: "393476182313",
+      telegramUser: "SegnalaFacileBot"
       email: "vocidicassino@proton.me",
       mapsQuery: "Cassino" // testo per Google Maps
     };
