--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
       whatsappNumber: "393476182313",   // es: 393476183313 (senza +)
       whatsappText: "Ciao! Ti scrivo da SegnalaFacile.",
       phoneNumber: "393476182313",
-      telegramUser: "SegnalaFacileBot"
+      telegramUsername: "SegnalaFacileBot"
       email: "vocidicassino@proton.me",
       mapsQuery: "Cassino" // testo per Google Maps
     };
