--- a/index.html
+++ b/index.html
@@ -184,6 +184,13 @@ nav.bottom{
 *{
   outline: 1px solid transparent;
 }
+  section{
+  display: none;
+}
+
+section:not(.hidden){
+  display: block;
+}
   </style>
 </head>
 
