--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="theme-color" content="#0b1220" />
-  <title>SegnalaFacile – Demo</title>
+  <title>SegnalaFacile</title>
 
   <link rel="manifest" href="manifest.webmanifest" />
   <link rel="icon" href="icons/icon-192.png" />
@@ -19,14 +19,13 @@
     }
     *{box-sizing:border-box}
     body{
-      margin:0;
-      font-family: system-ui,-apple-system,Segoe UI,Roboto,Arial;
-      background: var(--bg);
+      margin:0; font-family: system-ui,-apple-system,Segoe UI,Roboto,Arial;
+      background: radial-gradient(1200px 800px at 20% -10%, rgba(45,125,255,.25), transparent 50%),
+                  radial-gradient(1000px 700px at 80% 10%, rgba(25,195,125,.18), transparent 55%),
+                  var(--bg);
       color:var(--text);
-      -webkit-tap-highlight-color: transparent;
     }
     .wrap{max-width:860px; margin:0 auto; padding:22px 16px 90px}
-
     header{
       display:flex; align-items:center; justify-content:space-between; gap:12px;
       padding:12px 0 6px;
@@ -55,14 +54,12 @@
     }
     .hero h1{margin:0 0 8px; font-size:28px; line-height:1.15}
     .hero p{margin:0; color:var(--muted); font-size:14px; line-height:1.5}
-
     .btnRow{display:flex; gap:10px; flex-wrap:wrap; margin-top:14px}
     button, .btn{
       cursor:pointer; border:0; border-radius:14px;
       padding:12px 14px; font-weight:700; font-size:14px;
       display:inline-flex; align-items:center; gap:10px;
       text-decoration:none; color:var(--text);
-      user-select:none;
     }
     .primary{background:var(--accent)}
     .ghost{background:rgba(255,255,255,.06); border:1px solid var(--stroke)}
@@ -92,7 +89,6 @@
     }
     .toggle span{color:var(--muted); font-size:13px}
     .toggle strong{font-size:13px}
-
     .preview{
       margin-top:10px; display:none; gap:10px; align-items:flex-start;
       padding:12px; border-radius:14px; border:1px dashed var(--stroke);
@@ -100,7 +96,6 @@
     }
     .preview img{width:86px; height:86px; object-fit:cover; border-radius:14px; border:1px solid var(--stroke)}
     .preview .meta{font-size:12px; color:var(--muted); line-height:1.4}
-
     .pill{
       display:inline-flex; align-items:center; gap:8px;
       padding:6px 10px; border-radius:999px;
@@ -125,6 +120,7 @@
       background:rgba(9,14,28,.78);
       border-top:1px solid var(--stroke);
       backdrop-filter: blur(10px);
+      z-index: 9999;
     }
     nav .inner{
       max-width:860px; margin:0 auto;
@@ -149,36 +145,6 @@
       background:rgba(25,195,125,.12);
       color:var(--text);
     }
-
-    /* =========================
-       FIX TOUCH / CLICK MOBILE
-       ========================= */
-    body::before{
-      content:"";
-      position: fixed;
-      inset: 0;
-      background:
-        radial-gradient(1200px 800px at 20% -10%, rgba(45,125,255,.25), transparent 50%),
-        radial-gradient(1000px 700px at 80% 10%, rgba(25,195,125,.18), transparent 55%);
-      z-index: 0;
-      pointer-events: none;
-    }
-
-    .wrap, header, section, nav.bottom{
-      position: relative;
-      z-index: 1;
-    }
-
-    .btn, button, nav a{
-      pointer-events: auto;
-      touch-action: manipulation;
-    }
-
-    nav.bottom{ z-index: 9999; }
-
-    /* evita sovrapposizioni tra sezioni */
-    section{ display:none; }
-    section:not(.hidden){ display:block; }
   </style>
 </head>
 
@@ -189,7 +155,7 @@
         <div class="logo"></div>
         <div>
           <div class="title">SegnalaFacile</div>
-          <div class="badge">DEMO • PWA installabile • salvataggio locale</div>
+          <div class="badge">DEMO • PWA installabile • salvataggio locale + invio Telegram</div>
         </div>
       </div>
       <div class="pill" id="installPill" style="display:none;">⬇️ Installa</div>
@@ -199,23 +165,20 @@
     <section id="view-home" class="grid">
       <div class="card hero">
         <h1>Invia una segnalazione in pochi secondi</h1>
-        <p>
-          Descrivi il problema, aggiungi una foto e invia.
-          Niente messaggi sparsi: tutto ordinato e tracciabile.
-        </p>
+        <p>Descrivi il problema, aggiungi una foto e invia. Ti resta lo storico, e arriva anche su Telegram.</p>
         <div class="btnRow">
           <a class="btn primary" href="#/report">📝 Invia segnalazione</a>
           <a class="btn ghost" href="#/contacts">☎️ Contatti rapidi</a>
           <a class="btn ghost" href="#/my">🗂️ Le mie segnalazioni</a>
         </div>
-        <div class="hint">Nessuna registrazione richiesta. Questa demo salva le segnalazioni sul tuo telefono (in locale).</div>
+        <div class="hint">Questa demo salva in locale e inoltra il testo al gruppo Telegram tramite Worker.</div>
       </div>
 
       <div class="card">
         <div style="display:flex;justify-content:space-between;gap:10px;flex-wrap:wrap;align-items:center">
           <div>
             <div style="font-weight:800;margin-bottom:4px">Come funziona</div>
-            <div class="hint" style="margin:0">1) Compili • 2) Aggiungi foto • 3) Invi • 4) Ti resta lo storico</div>
+            <div class="hint" style="margin:0">1) Compili • 2) Aggiungi foto • 3) Invi • 4) Storico + Telegram</div>
           </div>
           <a class="btn small ghost" href="#/report">Prova ora →</a>
         </div>
@@ -251,7 +214,7 @@
           <div class="meta">
             <div style="font-weight:800;color:var(--text)">Anteprima foto</div>
             <div id="photoMeta"></div>
-            <div class="hint" style="margin-top:8px">La foto resta salvata nella demo solo sul tuo dispositivo.</div>
+            <div class="hint" style="margin-top:8px">La foto resta nel dispositivo; nel gruppo Telegram arriva solo la notifica “Foto: sì/no”.</div>
           </div>
         </div>
 
@@ -269,7 +232,7 @@
         </div>
 
         <div class="hint">
-          Nota: questa è una demo offline. In un progetto reale, l’invio può arrivare via email, database o pannello admin.
+          Inoltro Telegram: se il Worker non risponde, la segnalazione viene comunque salvata in locale.
         </div>
       </div>
     </section>
@@ -281,7 +244,7 @@
           <div style="font-size:22px">✅</div>
           <div>
             <div style="font-weight:900;font-size:18px">Segnalazione inviata correttamente</div>
-            <div class="hint" style="margin:6px 0 0">Grazie per la collaborazione.</div>
+            <div class="hint" style="margin:6px 0 0">Salvata in locale e inoltrata su Telegram (se configurato).</div>
           </div>
         </div>
 
@@ -328,7 +291,6 @@
 
         <div class="btnRow" style="margin-top:14px">
           <a class="btn primary" id="waLink" href="#">💬 WhatsApp</a>
-          <a class="btn ghost" id="tgLink" href="#" target="_blank" rel="noreferrer">💬 Telegram</a>
           <a class="btn ghost" id="telLink" href="#">📞 Telefono</a>
           <a class="btn ghost" id="mailLink" href="#">✉️ Email</a>
           <a class="btn ghost" id="mapLink" href="#" target="_blank" rel="noreferrer">📍 Posizione</a>
@@ -355,12 +317,15 @@
     // CONFIG (personalizza qui)
     // =========================
     const CONFIG = {
-      whatsappNumber: "393476182313",   // es: 393476183313 (senza +)
+      whatsappNumber: "393476183313", // SENZA "+"
       whatsappText: "Ciao! Ti scrivo da SegnalaFacile.",
-      phoneNumber: "393476182313",
-      telegramUsername: "SegnalaFacileBot",
+      phoneNumber: "393476183313",
       email: "vocidicassino@proton.me",
-      mapsQuery: "Cassino" // testo per Google Maps
+      mapsQuery: "Cassino",
+
+      // 🔥 INVIO TELEGRAM (Worker Cloudflare)
+      telegramWorkerUrl: "https://segnalafacile-telegram.vocidicassino.workers.dev",
+      telegramApiKey: "Marco-Admin-2026"
     };
 
     // =========================
@@ -371,7 +336,6 @@
       e.preventDefault();
       deferredPrompt = e;
       const pill = document.getElementById("installPill");
-      if(!pill) return;
       pill.style.display = "inline-flex";
       pill.addEventListener("click", async () => {
         try{
@@ -425,15 +389,13 @@
     const tel = document.getElementById("telLink");
     const mail = document.getElementById("mailLink");
     const map = document.getElementById("mapLink");
-    const tg = document.getElementById("tgLink");
 
     function applyContacts(){
       const waUrl = `https://wa.me/${CONFIG.whatsappNumber}?text=${encodeURIComponent(CONFIG.whatsappText)}`;
-      if(wa) wa.href = waUrl;
-      if(tel) tel.href = `tel:${CONFIG.phoneNumber}`;
-      if(mail) mail.href = `mailto:${CONFIG.email}`;
-      if(map) map.href = `https://www.google.com/maps/search/?api=1&query=${encodeURIComponent(CONFIG.mapsQuery)}`;
-      if(tg) tg.href = `https://t.me/${CONFIG.telegramUsername}`;
+      wa.href = waUrl;
+      tel.href = `tel:${CONFIG.phoneNumber}`;
+      mail.href = `mailto:${CONFIG.email}`;
+      map.href = `https://www.google.com/maps/search/?api=1&query=${encodeURIComponent(CONFIG.mapsQuery)}`;
     }
     applyContacts();
 
@@ -441,7 +403,6 @@
     // Local storage for reports
     // =========================
     const STORAGE_KEY = "segnalafacile_reports_v1";
-
     function loadReports(){
       try{ return JSON.parse(localStorage.getItem(STORAGE_KEY) || "[]"); }
       catch{ return []; }
@@ -467,77 +428,101 @@
 
     let photoDataUrl = null;
 
-    if(btnPickPhoto && elFoto){
-      btnPickPhoto.addEventListener("click", () => elFoto.click());
-    }
+    btnPickPhoto.addEventListener("click", () => elFoto.click());
+    btnClearPhoto.addEventListener("click", () => {
+      elFoto.value = "";
+      photoDataUrl = null;
+      preview.style.display = "none";
+    });
 
-    if(btnClearPhoto){
-      btnClearPhoto.addEventListener("click", () => {
-        if(elFoto) elFoto.value = "";
-        photoDataUrl = null;
-        if(preview) preview.style.display = "none";
-      });
-    }
-
-    if(elFoto){
-      elFoto.addEventListener("change", () => {
-        const file = elFoto.files && elFoto.files[0];
-        if(!file) return;
-        if(!file.type.startsWith("image/")){
-          alert("Seleziona un'immagine valida.");
-          return;
-        }
-        const reader = new FileReader();
-        reader.onload = () => {
-          photoDataUrl = reader.result;
-          if(photoImg) photoImg.src = photoDataUrl;
-          if(preview) preview.style.display = "flex";
-          if(photoMeta) photoMeta.textContent = `${file.name} • ${Math.round(file.size/1024)} KB`;
-        };
-        reader.readAsDataURL(file);
-      });
-    }
+    elFoto.addEventListener("change", async () => {
+      const file = elFoto.files && elFoto.files[0];
+      if(!file) return;
+      if(!file.type.startsWith("image/")){
+        alert("Seleziona un'immagine valida.");
+        return;
+      }
+      const reader = new FileReader();
+      reader.onload = () => {
+        photoDataUrl = reader.result;
+        photoImg.src = photoDataUrl;
+        preview.style.display = "flex";
+        photoMeta.textContent = `${file.name} • ${Math.round(file.size/1024)} KB`;
+      };
+      reader.readAsDataURL(file);
+    });
 
     function resetForm(){
-      if(elTitolo) elTitolo.value = "";
-      if(elDescrizione) elDescrizione.value = "";
-      if(elAnonimo) elAnonimo.checked = false;
-      if(elFoto) elFoto.value = "";
+      elTitolo.value = "";
+      elDescrizione.value = "";
+      elAnonimo.checked = false;
+      elFoto.value = "";
       photoDataUrl = null;
-      if(preview) preview.style.display = "none";
+      preview.style.display = "none";
     }
 
-    if(btnSend){
-      btnSend.addEventListener("click", () => {
-        const titolo = (elTitolo?.value || "").trim();
-        const descrizione = (elDescrizione?.value || "").trim();
-
-        if(titolo.length < 4){
-          alert("Inserisci un titolo (minimo 4 caratteri).");
-          return;
-        }
-        if(descrizione.length < 10){
-          alert("Inserisci una descrizione (minimo 10 caratteri).");
-          return;
-        }
-
-        const reports = loadReports();
-        const now = new Date();
-        const item = {
-          id: cryptoRandomId(),
+    async function sendToTelegram({ titolo, descrizione, anonimo, hasPhoto }) {
+      if(!CONFIG.telegramWorkerUrl) return;
+      try{
+        const payload = {
           titolo,
           descrizione,
-          anonimo: !!elAnonimo?.checked,
-          photoDataUrl,
-          createdAt: now.toISOString()
+          anonimo: !!anonimo,
+          when: new Date().toLocaleString("it-IT"),
+          hasPhoto: !!hasPhoto
         };
-        reports.unshift(item);
-        saveReports(reports);
 
-        resetForm();
-        location.hash = "#/success";
-      });
+        await fetch(CONFIG.telegramWorkerUrl, {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+            "X-Api-Key": CONFIG.telegramApiKey || ""
+          },
+          body: JSON.stringify(payload)
+        });
+      }catch(e){
+        console.warn("Invio Telegram fallito:", e);
+      }
     }
+
+    btnSend.addEventListener("click", async () => {
+      const titolo = elTitolo.value.trim();
+      const descrizione = elDescrizione.value.trim();
+
+      if(titolo.length < 4){
+        alert("Inserisci un titolo (minimo 4 caratteri).");
+        return;
+      }
+      if(descrizione.length < 10){
+        alert("Inserisci una descrizione (minimo 10 caratteri).");
+        return;
+      }
+
+      // 1) Invia a Telegram (non blocca l'app se fallisce)
+      await sendToTelegram({
+        titolo,
+        descrizione,
+        anonimo: !!elAnonimo.checked,
+        hasPhoto: !!photoDataUrl
+      });
+
+      // 2) Salva in locale
+      const reports = loadReports();
+      const now = new Date();
+      const item = {
+        id: cryptoRandomId(),
+        titolo,
+        descrizione,
+        anonimo: !!elAnonimo.checked,
+        photoDataUrl,
+        createdAt: now.toISOString()
+      };
+      reports.unshift(item);
+      saveReports(reports);
+
+      resetForm();
+      location.hash = "#/success";
+    });
 
     function cryptoRandomId(){
       return (crypto?.randomUUID?.() || ("id_" + Math.random().toString(16).slice(2) + Date.now()));
@@ -550,26 +535,19 @@
     const emptyState = document.getElementById("emptyState");
     const btnClearAll = document.getElementById("btnClearAll");
 
-    if(btnClearAll){
-      btnClearAll.addEventListener("click", () => {
-        const ok = confirm("Vuoi svuotare tutte le segnalazioni salvate su questo dispositivo?");
-        if(!ok) return;
-        saveReports([]);
-        renderList();
-      });
-    }
+    btnClearAll.addEventListener("click", () => {
+      const ok = confirm("Vuoi svuotare tutte le segnalazioni salvate su questo dispositivo?");
+      if(!ok) return;
+      saveReports([]);
+      renderList();
+    });
 
     function fmtDate(iso){
       const d = new Date(iso);
-      return d.toLocaleString("it-IT", {
-        year:"numeric", month:"2-digit", day:"2-digit",
-        hour:"2-digit", minute:"2-digit"
-      });
+      return d.toLocaleString("it-IT", { year:"numeric", month:"2-digit", day:"2-digit", hour:"2-digit", minute:"2-digit" });
     }
 
     function renderList(){
-      if(!list || !emptyState) return;
-
       const reports = loadReports();
       list.innerHTML = "";
 
