--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <div class="logo"></div>
         <div>
           <div class="title">SegnalaFacile</div>
-          <div class="badge">DEMO • PWA installabile • salvataggio locale + invio Telegram</div>
+          <div class="badge">PWA installabile • salvataggio locale + invio Telegram</div>
         </div>
       </div>
       <div class="pill" id="installPill" style="display:none;">⬇️ Installa</div>
@@ -171,7 +171,7 @@
           <a class="btn ghost" href="#/contacts">☎️ Contatti rapidi</a>
           <a class="btn ghost" href="#/my">🗂️ Le mie segnalazioni</a>
         </div>
-        <div class="hint">Questa demo salva in locale e inoltra il testo al gruppo Telegram tramite Worker.</div>
+        <div class="hint">Questa app salva in locale e inoltra il testo al gruppo Telegram tramite Worker.</div>
       </div>
 
       <div class="card">
@@ -297,7 +297,7 @@
         </div>
 
         <div class="hint" style="margin-top:12px">
-          (Demo) Modifica questi contatti dentro <b>index.html</b> nella sezione “CONFIG”.
+          Modifica questi contatti dentro <b>index.html</b> nella sezione “CONFIG”.
         </div>
       </div>
     </section>
