--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <label>Foto (opzionale)</label>
         <div class="row">
           <button class="ghost" id="btnPickPhoto" type="button">📷 Aggiungi foto</button>
-          <input id="foto" type="file" accept="image/*" capture="environment" class="hidden" />
+          <input id="foto" type="file" accept="image/*" class="hidden" />
           <button class="danger" id="btnClearPhoto" type="button">🧹 Rimuovi</button>
         </div>
 
