--- a/index.html
+++ b/index.html
@@ -430,68 +430,86 @@
       localStorage.setItem(STORAGE_KEY, JSON.stringify(arr));
     }
 
-    // =========================
-    // Form logic + photo
-    // =========================
-    const elTitolo = document.getElementById("titolo");
-    const elDescrizione = document.getElementById("descrizione");
-    const elAnonimo = document.getElementById("anonimo");
-    const elFoto = document.getElementById("foto");
-    const btnPickPhoto = document.getElementById("btnPickPhoto");
-    const btnClearPhoto = document.getElementById("btnClearPhoto");
-    const btnSend = document.getElementById("btnSend");
+// =========================
+// Form logic + photo
+// =========================
+const elTitolo = document.getElementById("titolo");
+const elDescrizione = document.getElementById("descrizione");
+const elAnonimo = document.getElementById("anonimo");
 
-    const preview = document.getElementById("photoPreview");
-    const photoImg = document.getElementById("photoImg");
-    const photoMeta = document.getElementById("photoMeta");
+// NUOVI input (camera + gallery)
+const elFotoCamera = document.getElementById("fotoCamera");
+const elFotoGallery = document.getElementById("fotoGallery");
 
-    let photoDataUrl = null;     // base64 compresso (per invio)
-    let photoLocalUrl = null;    // base64 compresso (per storico)
-    let photoName = "foto.jpg";
-    let photoType = "image/jpeg";
+// NUOVI bottoni
+const btnPickCamera = document.getElementById("btnPickCamera");
+const btnPickGallery = document.getElementById("btnPickGallery");
 
-    btnPickPhoto.addEventListener("click", () => elFoto.click());
-    btnClearPhoto.addEventListener("click", () => {
-      elFoto.value = "";
-      photoDataUrl = null;
-      photoLocalUrl = null;
-      photoName = "foto.jpg";
-      photoType = "image/jpeg";
-      preview.style.display = "none";
-    });
+const btnClearPhoto = document.getElementById("btnClearPhoto");
+const btnSend = document.getElementById("btnSend");
 
-    elFoto.addEventListener("change", async () => {
-      const file = elFoto.files && elFoto.files[0];
-      if(!file) return;
-      if(!file.type.startsWith("image/")){
-        alert("Seleziona un'immagine valida.");
-        return;
-      }
+const preview = document.getElementById("photoPreview");
+const photoImg = document.getElementById("photoImg");
+const photoMeta = document.getElementById("photoMeta");
 
-      photoName = file.name || "foto.jpg";
-      photoType = file.type || "image/jpeg";
+let photoDataUrl = null;
 
-      // Comprimi e ridimensiona (max 1280px)
-      const compressedDataUrl = await compressImageToDataUrl(file, 1280, 0.82);
-      photoDataUrl = compressedDataUrl;
-      photoLocalUrl = compressedDataUrl;
+// Apri fotocamera
+btnPickCamera.addEventListener("click", () => elFotoCamera.click());
 
-      photoImg.src = photoLocalUrl;
-      preview.style.display = "flex";
-      photoMeta.textContent = `${photoName} • ${Math.round(compressedDataUrl.length/1024)} KB (compresso)`;
-    });
+// Apri galleria
+btnPickGallery.addEventListener("click", () => elFotoGallery.click());
 
-    function resetForm(){
-      elTitolo.value = "";
-      elDescrizione.value = "";
-      elAnonimo.checked = false;
-      elFoto.value = "";
-      photoDataUrl = null;
-      photoLocalUrl = null;
-      photoName = "foto.jpg";
-      photoType = "image/jpeg";
-      preview.style.display = "none";
-    }
+// Rimuovi foto
+btnClearPhoto.addEventListener("click", () => {
+  elFotoCamera.value = "";
+  elFotoGallery.value = "";
+  photoDataUrl = null;
+  preview.style.display = "none";
+});
+
+// Funzione unica per gestire file scelto
+function handleSelectedFile(file){
+  if(!file) return;
+
+  if(!file.type || !file.type.startsWith("image/")){
+    alert("Seleziona un'immagine valida.");
+    return;
+  }
+
+  const reader = new FileReader();
+  reader.onload = () => {
+    photoDataUrl = reader.result;
+    photoImg.src = photoDataUrl;
+    preview.style.display = "flex";
+    photoMeta.textContent = `${file.name} • ${Math.round(file.size/1024)} KB`;
+  };
+  reader.readAsDataURL(file);
+}
+
+// Quando scatti foto
+elFotoCamera.addEventListener("change", () => {
+  const file = elFotoCamera.files && elFotoCamera.files[0];
+  handleSelectedFile(file);
+});
+
+// Quando scegli da galleria
+elFotoGallery.addEventListener("change", () => {
+  const file = elFotoGallery.files && elFotoGallery.files[0];
+  handleSelectedFile(file);
+});
+
+function resetForm(){
+  elTitolo.value = "";
+  elDescrizione.value = "";
+  elAnonimo.checked = false;
+
+  elFotoCamera.value = "";
+  elFotoGallery.value = "";
+
+  photoDataUrl = null;
+  preview.style.display = "none";
+}
 
     btnSend.addEventListener("click", async () => {
       const titolo = elTitolo.value.trim();
